fix #780 Removing overflow property from Select Widget style
Removing the overflow:hidden property from the CSS template of Select widget

--- a/src/aria/widgets/form/SelectStyle.tpl.css
+++ b/src/aria/widgets/form/SelectStyle.tpl.css
@@ -24,7 +24,6 @@
         .xSelect {
             display:inline-block;
             white-space:nowrap;
-            overflow:hidden;
         }
         {call startLooping()/}
     {/macro}
